[gd_scene load_steps=15 format=3 uid="uid://cquxa2foy3oqr"]

[ext_resource type="TileSet" uid="uid://vaknuourvmw6" path="res://tileset.tres" id="1_wp05j"]
[ext_resource type="Script" path="res://Player.gd" id="2_n5hpv"]
[ext_resource type="Texture2D" uid="uid://ckuiqxj20pdmy" path="res://assets/vector_characters.svg" id="3_mwp02"]
[ext_resource type="PackedScene" uid="uid://btjty383ts8ii" path="res://bullet.tscn" id="3_wfky2"]
[ext_resource type="Texture2D" uid="uid://7tvm7t1x07nh" path="res://assets/light.png" id="5_8u0e0"]
[ext_resource type="Texture2D" uid="uid://h08enlkr4u10" path="res://assets/topdownTanks_vector.svg" id="5_sdplx"]
[ext_resource type="PackedScene" uid="uid://1rty3sexdag7" path="res://Ennemy.tscn" id="7_kcbr7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yjhdo"]
size = Vector2(32, 37)

[sub_resource type="Animation" id="Animation_nptp8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xba1o"]
resource_name = "sprite"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rw6lx"]
_data = {
"RESET": SubResource("Animation_nptp8"),
"sprite": SubResource("Animation_xba1o")
}

[sub_resource type="Animation" id="Animation_g5dl7"]
resource_name = "Muzzle"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 1.2)]
}

[sub_resource type="Animation" id="Animation_5axwc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cgktu"]
_data = {
"Muzzle": SubResource("Animation_g5dl7"),
"RESET": SubResource("Animation_5axwc")
}

[node name="Main" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
rotation = -0.000380001
scale = Vector2(0.491618, 0.494258)
tile_set = ExtResource("1_wp05j")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(0, 65536, 0, 65536, 65536, 0, 131072, 65536, 0, 196608, 0, 0, 262144, 0, 0, 327680, 131072, 0, 393216, 65536, 0, 458752, 196608, 0, 524288, 131072, 0, 589824, 65536, 0, 655360, 65536, 0, 720896, 131072, 0, 1, 0, 0, 65537, 196608, 0, 131073, 65536, 0, 196609, 131072, 0, 262145, 131072, 0, 327681, 65536, 0, 393217, 196608, 0, 458753, 65536, 0, 524289, 131072, 0, 589825, 196608, 0, 655361, 196608, 0, 720897, 65536, 0, 2, 0, 0, 65538, 0, 0, 131074, 196608, 0, 196610, 0, 0, 262146, 196608, 0, 327682, 65536, 0, 393218, 65536, 0, 458754, 196608, 0, 524290, 0, 0, 589826, 196608, 0, 655362, 131072, 0, 720898, 65536, 0, 3, 196608, 0, 65539, 131072, 0, 131075, 196608, 0, 196611, 65536, 0, 262147, 131072, 0, 327683, 0, 0, 393219, 65536, 0, 458755, 196608, 0, 524291, 65536, 0, 589827, 65536, 0, 655363, 0, 0, 720899, 131072, 0, 4, 131072, 0, 65540, 0, 0, 131076, 131072, 0, 196612, 196608, 0, 262148, 0, 0, 327684, 131072, 0, 393220, 196608, 0, 458756, 65536, 0, 524292, 0, 0, 589828, 131072, 0, 655364, 196608, 0, 720900, 196608, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 196608, 0, 262149, 65536, 0, 327685, 0, 0, 393221, 65536, 0, 458757, 196608, 0, 524293, 131072, 0, 589829, 0, 0, 655365, 0, 0, 720901, 65536, 0, 6, 0, 0, 65542, 65536, 0, 131078, 196608, 0, 196614, 65536, 0, 262150, 0, 0, 327686, 196608, 0, 393222, 131072, 0, 458758, 0, 0, 524294, 0, 0, 589830, 131072, 0, 655366, 196608, 0, 720902, 65536, 0, 7, 0, 0, 65543, 196608, 0, 131079, 131072, 0, 196615, 196608, 0, 262151, 131072, 0, 327687, 131072, 0, 393223, 65536, 0, 458759, 0, 0, 524295, 65536, 0, 589831, 131072, 0, 655367, 196608, 0, 720903, 196608, 0, 8, 65536, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 65536, 0, 327688, 196608, 0, 393224, 65536, 0, 458760, 65536, 0, 524296, 65536, 0, 589832, 131072, 0, 655368, 0, 0, 720904, 65536, 0, 9, 131072, 0, 65545, 131072, 0, 131081, 0, 0, 196617, 0, 0, 262153, 131072, 0, 327689, 65536, 0, 393225, 65536, 0, 458761, 65536, 0, 524297, 131072, 0, 589833, 0, 0, 655369, 131072, 0, 720905, 131072, 0, 10, 196608, 0, 65546, 0, 0, 131082, 196608, 0, 196618, 196608, 0, 262154, 65536, 0, 327690, 65536, 0, 393226, 196608, 0, 458762, 0, 0, 524298, 65536, 0, 589834, 131072, 0, 655370, 131072, 0, 720906, 0, 0, 11, 0, 0, 65547, 65536, 0, 131083, 1048576, 4, 196619, 851968, 6, 262155, 65536, 0, 327691, 851968, 6, 393227, 851968, 6, 458763, 1048576, 5, 524299, 65536, 0, 589835, 0, 0, 655371, 131072, 0, 720907, 0, 0, 12, 0, 0, 65548, 196608, 0, 131084, 851968, 7, 196620, 983040, 6, 262156, 983040, 6, 327692, 983040, 6, 393228, 983040, 6, 458764, 917504, 7, 524300, 196608, 0, 589836, 131072, 0, 655372, 196608, 0, 720908, 131072, 0, 13, 131072, 0, 65549, 65536, 0, 131085, 851968, 7, 196621, 983040, 6, 262157, 983040, 6, 327693, 983040, 6, 393229, 983040, 6, 458765, 917504, 7, 524301, 131072, 0, 589837, 131072, 0, 655373, 131072, 0, 720909, 65536, 0, 14, 131072, 0, 65550, 196608, 0, 131086, 1114112, 4, 196622, 917504, 6, 262158, 917504, 6, 327694, 917504, 6, 393230, 917504, 6, 458766, 1114112, 5, 524302, 65536, 0, 589838, 65536, 0, 655374, 196608, 0, 720910, 65536, 0, 15, 131072, 0, 65551, 65536, 0, 131087, 0, 0, 196623, 131072, 0, 262159, 196608, 0, 327695, 65536, 0, 393231, 0, 0, 458767, 131072, 0, 524303, 131072, 0, 589839, 196608, 0, 655375, 65536, 0, 720911, 196608, 0, 16, 131072, 0, 65552, 196608, 0, 131088, 65536, 0, 196624, 131072, 0, 262160, 196608, 0, 327696, 131072, 0, 393232, 0, 0, 458768, 0, 0, 524304, 0, 0, 589840, 65536, 0, 655376, 0, 0, 720912, 196608, 0, 17, 65536, 0, 65553, 131072, 0, 131089, 65536, 0, 196625, 65536, 0, 262161, 0, 0, 327697, 65536, 0, 393233, 0, 0, 458769, 65536, 0, 524305, 0, 0, 589841, 196608, 0, 655377, 131072, 0, 720913, 0, 0, 18, 196608, 0, 65554, 0, 0, 131090, 196608, 0, 196626, 65536, 0, 262162, 65536, 0, 327698, 65536, 0, 393234, 196608, 0, 458770, 131072, 0, 524306, 196608, 0, 589842, 65536, 0, 655378, 65536, 0, 720914, 0, 0, 19, 196608, 0, 65555, 0, 0, 131091, 131072, 0, 196627, 65536, 0, 262163, 131072, 0, 327699, 65536, 0, 393235, 0, 0, 458771, 131072, 0, 524307, 196608, 0, 589843, 131072, 0, 655379, 131072, 0, 720915, 196608, 0)
layer_1/name = "Wall"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 10
layer_1/tile_data = PackedInt32Array(262152, 1310720, 5, 327688, 1310720, 4, 327689, 1310720, 5, 524298, 1376256, 10, 655363, 1179648, 8, 655372, 1441792, 10, 393234, 1179648, 8, 65553, 1179648, 9, 524290, 1179648, 9)
layer_2/name = "Between"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 20
layer_2/tile_data = PackedInt32Array(393221, 1245184, 6, 458757, 1245184, 7, 458756, 1179648, 7, 393220, 1179648, 6)
layer_3/name = "Top"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 30
layer_3/tile_data = PackedInt32Array(262158, 327680, 18, 327694, 327680, 18, 131084, 262144, 19)

[node name="Player" type="CharacterBody2D" parent="."]
z_index = 10
position = Vector2(415, 254)
script = ExtResource("2_n5hpv")
bullet = ExtResource("3_wfky2")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-4, -0.5)
shape = SubResource("RectangleShape2D_yjhdo")

[node name="Sprite" type="Sprite2D" parent="Player"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_mwp02")
hframes = 2
region_enabled = true
region_rect = Rect2(500, 10, 226, 108)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_rw6lx")
}

[node name="Aim" type="Marker2D" parent="Player"]
position = Vector2(27, 9)

[node name="MuzzleFlash" type="Sprite2D" parent="Player/Aim"]
visible = false
rotation = -1.5708
texture = ExtResource("5_sdplx")
offset = Vector2(0, 12)
region_enabled = true
region_rect = Rect2(336, 276, 22, 28)

[node name="MuzzleAnimation" type="AnimationPlayer" parent="Player/Aim"]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_cgktu")
}

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(1.5, 1.5)
limit_smoothed = true

[node name="PointLight2D" type="PointLight2D" parent="Player"]
energy = 0.36
shadow_enabled = true
texture = ExtResource("5_8u0e0")
texture_scale = 3.36

[node name="Timer" type="Timer" parent="Player"]
wait_time = 3.0
one_shot = true

[node name="FireChecker" type="Timer" parent="Player"]
wait_time = 0.25
one_shot = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="Ennemy" parent="." instance=ExtResource("7_kcbr7")]
position = Vector2(157, 607)

[node name="Ennemy2" parent="." instance=ExtResource("7_kcbr7")]
position = Vector2(1055, 638)

[connection signal="timeout" from="Player/Timer" to="Player" method="_on_timer_timeout"]
[connection signal="timeout" from="Player/FireChecker" to="Player" method="_on_fire_checker_timeout"]
